add get all products
